# photopainter-updater

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  compose.yml
.claude/: settings.local.json
.devcontainer/: .env.example  Dockerfile  devcontainer.json
.github/: release-drafter.yml  release-image-publish.yml
.github/agents/: copilot-instructions.md
.github/workflows/: release-drafter.yml  release-image-publish.yml
.specify/memory/: constitution.md
.specify/templates/: agent-file-template.md  constitution-template.md  plan-template.md  spec-template.md  tasks-template.md
comfyui/: .dockerignore  Dockerfile  entrypoint.sh  install-custom-nodes.sh
comfyui/runpod/: Dockerfile  README.md  start-ollama-worker.sh
comfyui/workflows/: README.md  llm-smoke-llama-cpp.json  llm-smoke-transformers.json
docs/: firmware-http-epaper.md  firmware.md  xiaozhi-esp32-architecture.md
docs/zimage-lora-trial/: .gitignore  README.md  contract.md  (+6 more)
firmware/: CMakeLists.txt  sdkconfig.defaults
firmware/main/: CMakeLists.txt  config.cc  config.h  display_update.cc  display_update.h  failure_state.cc  failure_state.h  main.cc  update_job.cc  update_job.h
scripts/: build-merged-image.sh  run-claude.sh  run-codex.sh
server/: .dockerignore  Cargo.toml  Dockerfile  README.md  run.sh
server/src/: app.rs  config.rs  logging.rs  main.rs  response.rs  routes.rs
server/src/image_pipeline/: binary.rs  bmp.rs  dither.rs  load.rs  mod.rs  upload.rs
server/testdata/image-dither-rotate/: README.md
xiaozhi-esp32/: README.md  sdkconfig.defaults
(+385 files in other folders)
