[package]
name = "http-bmp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
image = { version = "0.25", default-features = false, features = ["bmp", "png"] }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
